--- a/styles-responsive.css
+++ b/styles-responsive.css
@@ -49,6 +49,7 @@ body, a {
   width: 100%;
   text-align: center;
   font-size: 16px;
+  bottom: 0;
   font-weight: normal;
   line-height: 18px;
 }
